--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,90 @@
+body {
+    margin: 0;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    font-size: 1.6rem;
+    font-family: "Kumbh Sans", sans-serif;    
+    justify-content: center;
+    background-color: hsl(185,75%,39%);
+    
+}
+.top {
+    position: absolute;
+    right: 55%;
+    bottom: 35%;
+}
 
+.bottom {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
+
+.card {
+	display: grid;
+	grid-template-columns: 350px;
+	grid-template-rows: auto;
+	text-align: center;
+	background-color: #fff;
+	border-radius: 10px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	box-shadow: 0 1px 10px 1px hsl(227,10%,46%);
+}
+
+.card_image {
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.profile_pic {
+	border-radius: 100%;
+	position: relative;
+    margin-top: -15%;
+	border: 5px solid #fff;
+}
+
+h5 {
+    display: inline-block;
+    /* margin-top: 4% 0 0; */
+}
+
+span {
+    margin: 15px 0 0 5px;
+}
+
+p {
+    font-size: 15px;
+    margin-top: -7%;
+}
+
+h4 {
+    font-size: 10px;
+    font-weight: normal;
+    letter-spacing: 2px;
+}
+span,p, h4 {
+    color: hsl(227,10%,46%);
+}
+
+h5,h3 {
+    color: hsl(229,23%,23%);
+    font-weight: 700;
+    font-size: 18px;
+}
+
+h3, h4 {
+    margin: 0;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    border-top: 1px solid #e7e7e7;
+    padding: 7% 4%;
+    line-height: 1.5;
+}
